--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
+body{
+    background-color: whitesmoke;
+}
+
 .container {
+    display : flex;
+    text-align: center;
+    margin : auto;
     border : 1px solid black;
-    margin : 20px;
+    border-radius : 10px;
     padding : 10px;
+    width : 400px;  
    
 }
 h1 {
@@ -15,6 +23,15 @@ form {
     margin : 5px;
 }
 #btn {
-    display: flex;
-    align-items: center;
+    background-color : blue;
+    color : white;
+    border-radius : 10px;
+    border : 1px white;
+    margin : 5px;
+    float : inline-end;
+    width : 100px;
+}
+#result {
+    text-align: center;
+    color : red;
 }
