--- a/style.css
+++ b/style.css
@@ -1,19 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,300&display=swap');
 body{
-    background-color: whitesmoke;
+    background-color: rgb(232, 136, 115);
+    font-family: 'Lato', sans-serif;
+    color : rgb(27, 26, 55);
 }
 
 .container {
     display : flex;
+    flex-wrap: wrap;
     text-align: center;
+    flex-direction: column;
     margin : auto;
     border : 1px solid black;
     border-radius : 10px;
     padding : 10px;
     width : 400px;  
-   
+    background-color : rgb(160, 214, 221);
+    height : 700px;
 }
 h1 {
     text-align: center;
+    font-weight: bold;
 }
 form {
     display: flex;
@@ -28,10 +35,50 @@ form {
     border-radius : 10px;
     border : 1px white;
     margin : 5px;
-    float : inline-end;
     width : 100px;
+    
 }
 #result {
     text-align: center;
-    color : red;
+    color : rgb(27, 26, 55);
+}
+.table{
+    text-align: center;
+    
+}
+h2{
+    
+    text-align: center;
+}
+table {
+    display : flex;
+    justify-content: center;
+    align-self: baseline;
+    margin : 40px;
+    font-size: 20px;
+}
+.imc {
+    font-weight: bold;
+}
+#btn {
+    width : 100%;
+    height : 20px;
+    background-color: rgb(89, 60, 143);
+
+}
+.btn {
+    display: flex;
+}
+input {
+    border-radius : 5px;
+    border : none;
+}
+hr {
+    border-color: rgb(27, 26, 55);
+    border-radius : 10px;
+}
+.hr {
+    margin-bottom : 15px;
+    margin-top : 15px;
+    
 }
